// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`идет в сервис mlp с опцией max_repl_len 1`] = `
Object {
  "body": "{\\"subj\\":\\"TEST_SUBJ\\",\\"text\\":\\"TEST_TEXT\\"}",
  "headers": Object {
    "Content-Type": "application/json",
  },
  "json": true,
  "method": "POST",
  "query": Object {
    "letter_lang": "TEST_LANG",
    "max_repl_len": "42,37,25",
    "mid": "42",
    "reqId": "TEST_REQUEST_ID",
    "uid": "12",
    "user_lang": undefined,
  },
}
`;

exports[`идет в сервис mlp с опцией stid 1`] = `
Object {
  "body": "{\\"subj\\":\\"TEST_SUBJ\\",\\"text\\":\\"TEST_TEXT\\"}",
  "headers": Object {
    "Content-Type": "application/json",
  },
  "json": true,
  "method": "POST",
  "query": Object {
    "letter_lang": "TEST_LANG",
    "mid": "42",
    "reqId": undefined,
    "stid": "42.mail:1.2:3",
    "uid": "12",
    "user_lang": undefined,
  },
}
`;

exports[`идет в сервис mlp с опцией tid 1`] = `
Object {
  "body": "{\\"subj\\":\\"TEST_SUBJ\\",\\"text\\":\\"TEST_TEXT\\"}",
  "headers": Object {
    "Content-Type": "application/json",
  },
  "json": true,
  "method": "POST",
  "query": Object {
    "letter_lang": "TEST_LANG",
    "mid": "42",
    "reqId": undefined,
    "tid": "42",
    "uid": "12",
    "user_lang": undefined,
  },
}
`;

exports[`идет в сервис mlp с опцией types 1`] = `
Object {
  "body": "{\\"subj\\":\\"TEST_SUBJ\\",\\"text\\":\\"TEST_TEXT\\"}",
  "headers": Object {
    "Content-Type": "application/json",
  },
  "json": true,
  "method": "POST",
  "query": Object {
    "letter_lang": "TEST_LANG",
    "mid": "42",
    "reqId": undefined,
    "types": "1,2,3",
    "uid": "12",
    "user_lang": undefined,
  },
}
`;

exports[`идет в сервис mlp с правильными опциями 1`] = `
Object {
  "body": "{\\"subj\\":\\"TEST_SUBJ\\",\\"text\\":\\"TEST_TEXT\\"}",
  "headers": Object {
    "Content-Type": "application/json",
  },
  "json": true,
  "method": "POST",
  "query": Object {
    "letter_lang": "TEST_LANG",
    "mid": "42",
    "reqId": "TEST_REQUEST_ID",
    "uid": "12",
    "user_lang": undefined,
  },
}
`;
